packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit/+page.server.js
import { error } from '@sveltejs/kit';

export const actions = () => {
	throw error(400, 'oops');
};
